# herald

./: .gitignore  .heraldrc.json  .tool-versions  LICENSE  Makefile  Pipfile  README.md  config.py  pyproject.toml  schema.py  script.py  task.py  test_config.py  test_schema.py  test_script.py  test_task.py  tox.ini
herald/: cli.py  config.py  executor.py  git_status.py  logging.py  path.py  schema.py  script.py  task.py
herald/executor/: base.py  noop.py  subprocess.py
tests/: cli_test.py  config_test.py  conftest.py  context.py  executor_test.py  task_test.py  test_cli.py  test_config.py  test_executor.py  test_git_status.py  test_schema.py  test_script.py  test_task.py
tests/executor/: subprocess_test.py
