[tool.poetry]
name = "herald"
version = "0.1.0"
description = "Automatically run tasks based on git status"
authors = ["Ryan Pfeffer <rdpfeffer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
attrs = "^19.1"
jsonschema = "^3.0"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
isort = "^4.3"
pytest = "^4.6"
pytest-cov = "^2.7"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
mypy = "^0.720.0"
flake8 = "^3.7"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
